other-vpol/require-corp-version-label/.chainsaw-test/bad-pod-no-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-label
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
