other-vpol/require-corp-version-label/.chainsaw-test/bad-pod-no-v-prefix.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: "1.2.3"
  name: bad-pod-no-v-prefix
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
