other-vpol/require-corp-version-label/.chainsaw-test/bad-pod-short-version.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: v1.2
  name: bad-pod-short-version
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
