other-vpol/require-corp-version-label/.chainsaw-test/good-pod-v1-2-3.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: v1.2.3
  name: good-pod-v1-2-3
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
