other-vpol/require-corp-version-label/.chainsaw-test/good-pod-v9-9-9.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/version: v9.9.9
  name: good-pod-v9-9-9
  namespace: default
spec:
  containers:
  - image: nginx:1.21.0
    name: nginx
