other-vpol/require-corp-version-label/require-corp-version-label.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    policies.kyverno.io/category: Other
    policies.kyverno.io/description: Validates that pods have a corp.org/version label that matches the semver pattern ^v[0-9].[0-9].[0-9]$
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Label
    policies.kyverno.io/title: Require corp.org/version Label with Semver Pattern
  name: require-corp-version-label
spec:
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Audit
  validations:
  - expression: object.metadata.?labels[?'corp.org/version'].orValue('').matches('^v[0-9].[0-9].[0-9]$')
    message: 'The label `corp.org/version` is required and must match the specified regex: ^v[0-9].[0-9].[0-9]$'
