other-vpol/require-corp-version-label/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-corp-version-label
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-corp-version-label.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1alpha1
          kind: ValidatingPolicy
          metadata:
            name: require-corp-version-label
          spec:
            validationActions:
            - Deny
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: good-pod-v1-2-3.yaml
    - apply:
        file: good-pod-v0-0-1.yaml
    - apply:
        file: good-pod-v9-9-9.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-no-label.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-short-version.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-no-v-prefix.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-long-version.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-invalid-version.yaml
